@@ -230,9 +230,11 @@ may use the mouse to inspect the detail of individual files and users.
 
 TAB cycles through selecting the current visible users.
 
-The camera mode, either tracking activity, or showing the entire code tree, can
-be toggled using the V key. You can drag the mouse on the background to
-manually control the camera.
+The camera mode, either tracking activity or showing the entire code tree, can
+be toggled using the Middle mouse button.
+
+You can drag the left mouse button to manually control the camera. The right
+mouse button rotates the view.
 
 Interactive keyboard commands:
 
