@@ -1,5 +1,7 @@
 0.26:
  * Improved mouse dragging.
+ * Holding right mouse button and moving the mouse rotates the view.
+ * The middle mouse button now toggles the camera mode.
  * Username positions now scale correctly.
  * Simulation time no longer incremented while paused, counting towards file time lag.
  * M key now toggles mouse visibility.
